Fix top gap

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,6 @@ html, body {
   padding: 0;
 }
 
-body {
-  background: #ff0000;
+#app {
+  display: flex;
 }
